增加journal记录，增加journal恢复